--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.13.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.3.7"
   }
 }
-
