--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.13.3",
+    "bangla-calendar": "^7.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.541.0",
